# libctapimkt

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in  ctapi.c  mktlin.c
ctapimkt/: ctapi.h
debian/: README.Debian  README.source  changelog  control  copyright  libctapimkt0-dev.examples  rules  watch
debian/patches/: clang_FTBFS_Wreturn-type.patch  libusb-1.0.patch  parallel-ftbfs.patch  series
